--- a/style.css
+++ b/style.css
@@ -1,60 +1,86 @@
 @CHARSET "UTF-8";
 
-/* set-up for ems */
-body{
-	font-size: 100%;
-}
-
-/* setup form to take full screen  */
-form{
-    position:absolute;
-    top:0;
-    left:0;
-	
-	width: 100%;
+html, body, form{
 	height: 100%;
 }
 
-/* 
-put number field and operators side-by-side
-*/
-
-form>div{
-	float: left;
-    top: 0;
-	height: 85%;
+body{
+background: rgb(69,72,77); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(69,72,77,1) 0%, rgba(0,0,0,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(69,72,77,1)), color-stop(100%,rgba(0,0,0,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
 }
 
-#numField{
-    width: 75%;
+#inputField{
+	height: 80%;
 }
 
-#operators{
-	width: 25%;
-}
-
-/*
-display four functions in column
-*/
-#operators>input{
-	/*display:block;*/
+#inputField>div{
+	height: 25%;
 }
 
 input{
-	width: 15em;
-	height: 15em;
-	margin-left: 3em;
-	display: inline-block;
-	
+	margin-left: 2%;
+	height: 100%;
+	background-color: #000000;
+	color: #FFFFFF;
+	font-size: 200%;
+	background: rgb(125,126,125); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(125,126,125,1) 0%, rgba(14,14,14,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(125,126,125,1)), color-stop(100%,rgba(14,14,14,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(125,126,125,1) 0%,rgba(14,14,14,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(125,126,125,1) 0%,rgba(14,14,14,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(125,126,125,1) 0%,rgba(14,14,14,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(125,126,125,1) 0%,rgba(14,14,14,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7d7e7d', endColorstr='#0e0e0e',GradientType=0 ); /* IE6-9 */
+}
+
+input.operator{
+	background: rgb(176,176,176); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(176,176,176,1) 0%, rgba(108,108,108,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(176,176,176,1)), color-stop(100%,rgba(108,108,108,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(176,176,176,1) 0%,rgba(108,108,108,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(176,176,176,1) 0%,rgba(108,108,108,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(176,176,176,1) 0%,rgba(108,108,108,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(176,176,176,1) 0%,rgba(108,108,108,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b0b0b0', endColorstr='#6c6c6c',GradientType=0 ); /* IE6-9 */
+}
+
+#inputField>div>input:last-child{
+	margin-right: 2%;
+}
+
+#inputField>div>input{
+	width: 22.2%;
+}
+
+div#specialFuncs>input:last-child{
+	width: 22.2%;
+	margin-right:2%;
+}
+
+div#specialFuncs>input{
+	width: 16.1%;
 }
 
 output{
+	margin: 1% 3%;
     display: block;
     text-align: right;
-
-    margin-right: 5%;
     line-height: 100%;
-
-    height:15%;
-    font:100%;
+    height: 20%;
+    font-size: 400%;
+    vertical-align: baseline;
+    background: rgb(255,255,255); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(229,229,229,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(229,229,229,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */    
 }
