--- a/style.css
+++ b/style.css
@@ -68,12 +68,12 @@ div#specialFuncs>input{
 }
 
 output{
-	margin: 1% 3%;
+	margin: 0% 2% 3%;
     display: block;
     text-align: right;
-    line-height: 100%;
-    height: 20%;
-    font-size: 400%;
+    /*line-height: 100%;*/
+    height: 14%;
+    font-size: 500%;
     vertical-align: baseline;
     background: rgb(255,255,255); /* Old browsers */
 	background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(229,229,229,1) 100%); /* FF3.6+ */
