--- a/style.css
+++ b/style.css
@@ -4,15 +4,20 @@ html, body, form{
 	height: 100%;
 }
 
+form{
+	text-align:center;
+}
+
 body{
-background: rgb(69,72,77); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(69,72,77,1) 0%, rgba(0,0,0,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(69,72,77,1)), color-stop(100%,rgba(0,0,0,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* IE10+ */
-background: linear-gradient(to bottom,  rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
+	overflow: hidden;
+	background: rgb(69,72,77); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(69,72,77,1) 0%, rgba(0,0,0,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(69,72,77,1)), color-stop(100%,rgba(0,0,0,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
 }
 
 #inputField{
@@ -24,7 +29,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d', end
 }
 
 input{
-	margin-left: 2%;
+	margin-left: 1%;
 	height: 100%;
 	background-color: #000000;
 	color: #FFFFFF;
@@ -50,25 +55,25 @@ input.operator{
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b0b0b0', endColorstr='#6c6c6c',GradientType=0 ); /* IE6-9 */
 }
 
-#inputField>div>input:last-child{
-	margin-right: 2%;
+#inputField>div>input:first-child{
+	margin-left: 0%;
 }
 
 #inputField>div>input{
-	width: 22.2%;
+	width: 20%;
 }
 
-div#specialFuncs>input:last-child{
-	width: 22.2%;
-	margin-right:2%;
+div#specialFuncs>input:first-child{
+	width: 20%;
+	margin-right:0%;
 }
 
 div#specialFuncs>input{
-	width: 16.1%;
+	width: 14.67%;
 }
 
 output{
-	margin: 0% 2% 3%;
+	margin: 1% 8.25% 3%;
     display: block;
     text-align: right;
     /*line-height: 100%;*/
@@ -83,4 +88,9 @@ output{
 	background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* IE10+ */
 	background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */    
+}
+
+
+*{
+	overflow: inherit;
 }
