--- a/reset.css
+++ b/reset.css
@@ -1,8 +1,28 @@
-@CHARSET "UTF-8";
+@charset "UTF-8";
 
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
+/* 
+I found this reset at:
+http://meyerweb.com/eric/tools/css/reset/ 
+v2.0 | 20110126
+License: none (public domain)
+
+This file is part of Abacus For The Rest Of Us
+Copyright (C) 2013 Max Galloway-Carson
+
+Abacus For The Rest Of Us is free software: you can redistribute it and/or modify
+it under the terms of the GNU Affero General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+GNU Affero General Public License for more details.
+
+You should have received a copy of the GNU Affero General Public License
+along with this program. If not, see <http://www.gnu.org/licenses/>.
+
+email me at: maxvgc@gmail.com
 */
 
 html, body, div, span, applet, object, iframe,
