--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ html,body,form {
 form {
 	text-align: center;
 	background-color: #000000;
+	overflow: hidden;
 }
 
 #inputField {
@@ -117,4 +118,8 @@ output {
 	background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%,
 		rgba(229, 229, 229, 1) 100% ); /* W3C */
 
+}
+
+*{
+	overflow: inherit;
 }
