--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ You should have received a copy of the GNU Affero General Public License
 along with this program. If not, see <http://www.gnu.org/licenses/>.
 
 email me at: maxvgc@gmail.com
+source code: https://github.com/maxvgc/abacus-for-the-rest-of-us
 */
 
 html,body,form {
