updating contact info

--- a/css/reset.css
+++ b/css/reset.css
@@ -7,7 +7,7 @@ v2.0 | 20110126
 License: none (public domain)
 
 This file is part of Abacus For The Rest Of Us
-Copyright (C) 2013 Max Galloway-Carson
+Copyright (C) 2015 Max Galloway
 
 Abacus For The Rest Of Us is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
@@ -22,7 +22,7 @@ GNU Affero General Public License for more details.
 You should have received a copy of the GNU Affero General Public License
 along with this program. If not, see <http://www.gnu.org/licenses/>.
 
-email me at: maxvgc@gmail.com
+email me at: webmaster@pwipw.com
 */
 
 html, body, div, span, applet, object, iframe,
